[package]
name = "moos"
version = "0.1.0"
authors = ["cgagner"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-timer = "0.2.13"
log = "0.4"

# TODO: Move this dependency to the example
simple_logger = "1.11.0"
