[package]
name = "moos"
version = "0.1.0"
description = "Rust implementation of the Mission Oriented Operating Suite (MOOS) libraries."
authors = ["Christopher Gagner <christopher.gagner@gmail.com>"]
edition = "2018"
readme = "README.md"
license = "Apache-2.0"
homepage = "https://github.com/cgagner/moos-rs" # placeholder
repository = "https://github.com/cgagner/moos-rs" # placeholder
categories = ["network-programming", "science::robotics"]
rust-version = "1.52"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-timer = "0.2.13"
log = "0.4"
regex = "1.5.4"
serde = "1.0"
toml = "0.5"
serde_yaml = "0.8"
serde_json = "1.0"
clap = "2.33"

# TODO: Move this dependency to the example
simple_logger = "1.11.0"


[dev-dependencies]
simple_logger = "1.11.0"