[package]
name = "moos-ivp-language-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
lsp-server = "0.7.6"
lsp-server-derive-macro = { version = "0.1.0", path = "crates/lsp-server-derive-macro" }
lsp-types = "0.95.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
