[package]
name = "moos-parser"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
lalrpop-util = {version = "0.19.12", features = ["lexer"]}
log = "0.4"
tracing = "0.1.40"


[dev-dependencies]
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
anyhow = "1.0.81"

[build-dependencies]
lalrpop = {version = "0.19.12", features = ["lexer"]}

