[package]
name = "moos-monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.2", features = ["env", "derive", "cargo"] }
crossterm = "0.26.1"
log = "0.4.17"
serde = { version = "1.0.160", features = ["derive"] }
simple_logger = "4.1.0"
tui = { package = "ratatui", version = "0.20.1" }
moos-parser = {path = "../../moos-parser"}
moos = {path = "../../moos"}