[package]
name = "lsp-server-derive-macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]  
lsp-server = "0.7.6"
lsp-types = "0.95.1"
syn = { version = "2", features = ["full", "parsing"] }
quote = "1.0.35"
